* fix #277: Wrong IFNUMBER set in connections for some devices supporting LLDP
* Fix to support constraint on IFPORTDUPLEX, IFSTATUS & IFINTERNALSTATUS to prevent
  devices not respecting standards to be rejected by GLPI 10. This can fix the import
  of few Fortinet devices.
* Add support for Zyxel devices
* fix #337: Add TP-Link linux appliance support

deploy:
* Fix possible failure when mirror is set but misses file parts
* Report friendly message if no mirror is defined to download file parts
* Refacto to keep deploy tree as clean as possible
* Refacto to add debug
* Fix copy & move actions failing under win32 while running as a service
* Add unit tests for ActionProcessor
* Bump version to 3.0

esx:
* Add SERIAL number to virtualmachines as they will be seen in BIOS
* Updated glpi-esx: added --json option support, deprecated --directory option
  in favor of new --path option, added --stdout option
* fix #204: Fix wrong encoding

injector:
* Support --proxy option or use current user proxy environment if set

toolbox:
* Fix Inventory page not displayed when netdiscovery or netinventory tasks are not installed
* Default configuration now authorize to update toolbox interface from the UI
* Support remotes management and remoteinventory task start
* Bump ToolBox plugin version to 1.1

basic-authentication-server-plugin:
* New feature to support basic authentication on embedded http server via a dedicated plugin
* Bump version to 1.0

packaging:
* Update MacOSX packages to use OpenSSL 3.0.8 & zlib 1.2.13
* Temporarily update PATH to use provided exe files when running agent from BAT scripts on win32
* win32: updated dmidecode to 3.4-update-1
* fix #298: Fix cron script for debian in linux perl installer
* fix #305: Support --proxy & --use-current-user-proxy options in linux perl installer
* fix missing --no-category support in linux perl installer
* fix #315: Add --user & --password options support in linux perl installer

tools: